<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensors</name>
  <version>0.0.2</version>
  <description>Quadruped catbot sensors and motor control package</description>
  <maintainer email="wl85@rice.edu">winsonl8</maintainer>
  <license>MIT</license>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>sensor_msgs</exec_depend> <!-- Commonly used for publishing sensor data -->
  <exec_depend>std_msgs</exec_depend> <!-- Standard message types -->
  <exec_depend>geometry_msgs</exec_depend> <!-- For geometry-related message types -->
  <exec_depend>nav_msgs</exec_depend> <!-- For navigation-related message types -->
  <exec_depend>tf2_ros</exec_depend> <!-- For transform-related operations -->
  <exec_depend>tf2_geometry_msgs</exec_depend> <!-- For TF2 geometry messages -->

  <!-- Additional dependencies for sensor interfacing -->
  <exec_depend>python3-gpiozero</exec_depend> <!-- If using GPIO Zero library -->
  <exec_depend>python3-rpi.gpio</exec_depend> <!-- If using RPi.GPIO library -->
  <exec_depend>python3-smbus</exec_depend> <!-- For I2C communication, e.g., MPU-6050 -->

  <!-- ODrive specific dependencies -->
  <!-- Ensure the ODrive Python library is installed in Python environment -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
